# chatappbackend

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/connections/: mod.rs  users.rs
src/messagehandler/: handler.rs  messages.rs  mod.rs  shared.rs  usernames.rs
src/uniqueid/: generator.rs  mod.rs
src/usermanager/: main.rs  mod.rs
src/utils/: methods.rs  mod.rs  statics.rs
