[package]
name = "main-app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.41", features = ["serde"]}
futures-util = "0.3.31"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.45.0", features = ["full"]}
tokio-tungstenite = "0.26.2"

